@@ -11,7 +11,7 @@
 #include "x/w/pictformat.H"
 #include "x/w/picture.H"
 #include "x/w/pixmap.H"
-#include "x/w/impl/scratch_buffer.H"
+#include "scratch_buffer.H"
 #include "x/w/impl/scratch_and_mask_buffer_draw.H"
 #include <algorithm>
 
