@@ -4,7 +4,7 @@
 */
 #include "libcxxw_config.h"
 #include "x/w/impl/scratch_and_mask_buffer_draw.H"
-#include "x/w/impl/scratch_buffer.H"
+#include "scratch_buffer.H"
 #include "x/w/impl/child_element.H"
 #include "generic_window_handler.H"
 #include "x/w/picture.H"
