@@ -7,21 +7,35 @@
 #include "x/w/pixmap.H"
 #include "x/w/screen.H"
 #include "x/w/pictformat.H"
-#include "x/w/impl/scratch_buffer.H"
+#include "scratch_buffer.H"
 #include <x/exception.H>
 
 LIBCXXW_NAMESPACE_START
 
 scratch_bufferObj::implObj::implObj(const const_pictformat &scratch_pictformat,
+				    const std::string &identifier,
 				    const screen &scratch_screen)
 
 	: scratch_pictformat{scratch_pictformat},
+#if SCRATCH_BUFFER_DEBUG
+	  identifier{identifier},
+#endif
 	  scratch_screen{scratch_screen},
 	  cached_picture{std::nullopt}
 {
+#if SCRATCH_BUFFER_DEBUG
+	std::cout << "scratch buffer " << identifier << "@" << this
+		  << " created" << std::endl;
+#endif
 }
 
-scratch_bufferObj::implObj::~implObj()=default;
+scratch_bufferObj::implObj::~implObj()
+{
+#if SCRATCH_BUFFER_DEBUG
+	std::cout << "scratch buffer " << identifier << "@" << this
+		  << " destroyed" << std::endl;
+#endif
+}
 
 void scratch_bufferObj::implObj
 ::do_get(dim_t minimum_width,
@@ -50,24 +64,51 @@ void scratch_bufferObj::implObj
 			return;
 		}
 
-		// Hmm, let's leave room for growth.
+#if SCRATCH_BUFFER_DEBUG
+		std::cout << "scratch buffer " << identifier << "@" << this
+			  << ": too small for "
+			  << minimum_width << "x"
+			  << minimum_height << std::endl;
+#endif
+
+		// Hmm, let's leave room for growth. Add 1/4th of the
+		// increase as an extra buffer. However if this pushes
+		// us past the size of the screen, limit at that. It's unlikely
+		// that we'll grow past the screen's size.
 
 		if (minimum_width > current_width)
+		{
 			current_width = dim_t::truncate(minimum_width
 							+ (minimum_width-
 							   current_width)/4);
-		else
-			minimum_width=current_width;
+
+			if (current_width > scratch_screen->width_in_pixels())
+				current_width=minimum_width;
+		}
+
+		minimum_width=current_width;
 
 		if (minimum_height > current_height)
+		{
 			current_height = dim_t::truncate(minimum_height
 							+ (minimum_height-
 							   current_height)/4);
-		else
-			minimum_height=current_height;
+
+			if (current_height > scratch_screen->height_in_pixels())
+				current_height=minimum_height;
+		}
+
+		minimum_height=current_height;
 	}
 
 	lock->reset(); // Politely release the current resources, first.
+
+#if SCRATCH_BUFFER_DEBUG
+	std::cout << "scratch buffer " << identifier << "@" << this
+		  << ": resized to "
+		  << minimum_width << "x"
+		  << minimum_height << std::endl;
+#endif
 
 	auto new_pm=scratch_screen->create_pixmap(scratch_pictformat,
 						  minimum_width,
