@@ -1,3 +1,8 @@
+2020-03-22  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* borderlayoutmanager_impl.C: Fix incorrect scratch buffer usage,
+	resulting in inefficient scratch buffer operations.
+
 2020-03-21  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* editor_impl.C: Do not invoke the autocomplete callback in response
